--- a/package.json
+++ b/package.json
@@ -47,6 +47,7 @@
 		"firebase": "^5.0.4",
 		"react": "16.3.1",
 		"react-native": "~0.55.2",
+		"react-native-circular-progress": "^0.2.0",
 		"react-navigation": "^2.3.1"
 	}
 }
