--- a/tsconfig.json
+++ b/tsconfig.json
@@ -10,7 +10,7 @@
 		"sourceMap": true,
 		"experimentalDecorators": true,
 		"preserveConstEnums": true,
-		"allowJs": true,
+		// "allowJs": true,
 		"noUnusedLocals": true,
 		"noUnusedParameters": true,
 		"noImplicitReturns": true,
