--- a/app.json
+++ b/app.json
@@ -1,5 +1,20 @@
 {
-  "expo": {
-    "sdkVersion": "27.0.0"
-  }
+	"expo": {
+		"sdkVersion": "27.0.0",
+		"name": "Couple Points",
+		"slug": "couple-points",
+		"privacy": "public",
+		"platform": "ios",
+		"version": 1,
+		"orientation": "portrait",
+		"icon": "./assets/images/cp-icon.png",
+		"splash": {
+			"backgroundColor": "##FF4E50",
+			"resizeMode": "cover"
+		},
+		"notification": {
+			"icon": "./assets/images/cp-icon.png",
+			"color": "#FF4E50"
+		}
+	}
 }
